[IE11 & Edge] Fix issue with sub navigations not showing on old browsers due to the "focus-within" selector not being recognised.

--- a/sass/objects/_objects.navigation.scss
+++ b/sass/objects/_objects.navigation.scss
@@ -129,8 +129,7 @@
 
 .o-nav__item--has-sub {
 	&:hover,
-	&:focus,
-	&:focus-within {
+	&:focus {
 		.o-nav__list--sub {
 			left: 0; 												// [a]
 			opacity: 1; 											// [b]
